--- a/Documentation/Sections/0_Packages.tex
+++ b/Documentation/Sections/0_Packages.tex
@@ -8,12 +8,8 @@
 
 % Used fo C++ Language
 \usepackage{listings}
-\lstset{
-	frame=tb, % draw a frame at the top and bottom of the code block
-	tabsize=4, % tab space width
-	showstringspaces=false, % don't mark spaces in strings
-	numbers=left, % display line numbers on the left
-	commentstyle=\color{green}, % comment color
-	keywordstyle=\color{blue}, % keyword color
-	stringstyle=\color{red} % string color
+\lstset { %
+	language=C++,
+	backgroundcolor=\color{black!5}, % set backgroundcolor
+	basicstyle=\footnotesize,% basic font setting
 }
